[package]
name = "my-tui-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "^0.6", features = [ "sqlite", "runtime-tokio-rustls"] }

[profile.dev.package.sqlx-macros]
opt-level = 3